resource tab and resource reconfig

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5388,3 +5388,11 @@ br {
 .smaller {
     font-size: 20px !important;
 }
+
+.double-image {
+    max-width: 20em;
+}
+
+.resource-imgs {
+    margin: 2em 0;
+}
