new banner and bio

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3513,7 +3513,7 @@ table.alt tbody tr td {
             rgba(58, 58, 58, 0.6),
             rgba(58, 58, 58, 0.6)
         ),
-        url("../../images/devin.png");
+        url("../../images/3D\ trimmed.png");
     background-position: center, center;
     background-repeat: repeat, no-repeat;
     background-size: auto, cover;
@@ -4168,7 +4168,7 @@ body.header-alt .dropotron.level-0 {
             rgba(58, 58, 58, 0.6),
             rgba(58, 58, 58, 0.6)
         ),
-        url("../../images/devin.png");
+        url("../../images/3D\ trimmed.png");
     background-position: center, center;
     background-repeat: repeat, no-repeat;
     background-size: auto, cover;
